# lesson-audit

./: .gitignore  assembler.py  batch_capture.py  debug_specific.py  download_recordings.py  log copy.md  log.md  navigator.py  profiles.py  pyproject.toml  recordings_state.json  report_batch.md  test_7_files.py  test_cdp_capture.py  video_capture.py
lesson-audit/: capturer.py  crawler.py  export_pdf.py  main.py  profiles.json  queue_state.json  retry_list.txt  video_capture.py
